# mcp-ahrefs

./: .ai-prompts.md  .coveragerc  .gitignore  BAZEL_INTEGRATION.md  BUILD.bazel  CHANGELOG.md  LICENSE  README.md  mcp.integration_test.json  pyproject.toml  requirements.txt  requirements_linux_arm64.txt  test_correlation_id_integration.py  test_mcp_integration.ps1  test_mcp_integration.sh  test_unified_logging.py
docs/: DECORATOR_PATTERNS.md  MCP_INSPECTOR_GUIDE.md  UNIFIED_LOGGING.md
mcp_ahrefs/: __init__.py  __main__.py  config.py  logging_config.py
mcp_ahrefs/decorators/: exception_handler.py  sqlite_logger.py  tool_logger.py
mcp_ahrefs/logging/: __init__.py
mcp_ahrefs/logging/destinations/: sqlite.py
mcp_ahrefs/server/: __init__.py  app.py
mcp_ahrefs/tools/: example_tools.py
mcp_ahrefs/ui/: app.py
mcp_ahrefs/ui/lib/: __init__.py  components.py  styles.py  utils.py
mcp_ahrefs/ui/pages/: 1_Home.py  2_Configuration.py  3_Logs.py
tests/: README.md  __init__.py
tests/integration/: COVERAGE_GUIDE.md  test_mcp_integration.py
tests/unit/: __init__.py  test_decorators.py
